add message send

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 PORT=8800
 MONGO_CS=mongodb+srv://messenger:messenger@cluster0.wxu9fv6.mongodb.net/?retryWrites=true&w=majority
+JWT_SECRET=xlbq6TEdvk3sXVIr5fHJRmWX7jZ2C6U1
+JWT_EXPIRE=30d
+COOKIE_EXPIRE=30
